// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for hasSlottedAnchor: false and isActive: false 1`] = `
":host {
  display: grid;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
a {
  all: unset;
  padding: calc(var(--p-spacing-fluid-sm) + 2px) calc(var(--p-spacing-fluid-sm) + 4px);
  margin: -2px calc(var(--p-spacing-fluid-sm) * -1 - 4px);
  border-radius: var(--p-radius-sm);
  font: var(--p-font-weight-normal) var(--p-typescale-md) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--_p-drilldown-a);
  text-decoration: underline;
  text-decoration-color: transparent;
  cursor: pointer;
  transition: text-decoration-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
}
a:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
@media(forced-colors:active) {
  a:focus-visible {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  a:hover {
    text-decoration-color: inherit;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for hasSlottedAnchor: false and isActive: true 1`] = `
":host {
  display: grid;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
a {
  all: unset;
  padding: calc(var(--p-spacing-fluid-sm) + 2px) calc(var(--p-spacing-fluid-sm) + 4px);
  margin: -2px calc(var(--p-spacing-fluid-sm) * -1 - 4px);
  border-radius: var(--p-radius-sm);
  font: var(--p-font-weight-normal) var(--p-typescale-md) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--_p-drilldown-a);
  text-decoration: underline;
  text-decoration-color: inherit;
  cursor: default;
  transition: text-decoration-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
}
a:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
@media(forced-colors:active) {
  a:focus-visible {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  a:hover {
    text-decoration-color: inherit;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for hasSlottedAnchor: false and isActive: true 2`] = `
":host {
  display: grid;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
a {
  all: unset;
  padding: calc(var(--p-spacing-fluid-sm) + 2px) calc(var(--p-spacing-fluid-sm) + 4px);
  margin: -2px calc(var(--p-spacing-fluid-sm) * -1 - 4px);
  border-radius: var(--p-radius-sm);
  font: var(--p-font-weight-normal) var(--p-typescale-md) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--_p-drilldown-a);
  text-decoration: underline;
  text-decoration-color: inherit;
  cursor: default;
  transition: text-decoration-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
}
a:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
@media(forced-colors:active) {
  a:focus-visible {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  a:hover {
    text-decoration-color: inherit;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for hasSlottedAnchor: false and isActive: true 3`] = `
":host {
  display: grid;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
a {
  all: unset;
  padding: calc(var(--p-spacing-fluid-sm) + 2px) calc(var(--p-spacing-fluid-sm) + 4px);
  margin: -2px calc(var(--p-spacing-fluid-sm) * -1 - 4px);
  border-radius: var(--p-radius-sm);
  font: var(--p-font-weight-normal) var(--p-typescale-md) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--_p-drilldown-a);
  text-decoration: underline;
  text-decoration-color: inherit;
  cursor: default;
  transition: text-decoration-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out);
}
a:focus-visible {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
@media(forced-colors:active) {
  a:focus-visible {
    outline-color: Highlight;
  }
}

@media(hover:hover) {
  a:hover {
    text-decoration-color: inherit;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for hasSlottedAnchor: true and isActive: false 1`] = `
":host {
  display: grid;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(a) {
  all: unset !important;
  padding: calc(var(--p-spacing-fluid-sm) + 2px) calc(var(--p-spacing-fluid-sm) + 4px) !important;
  margin: -2px calc(var(--p-spacing-fluid-sm) * -1 - 4px) !important;
  border-radius: var(--p-radius-sm) !important;
  font: var(--p-font-weight-normal) var(--p-typescale-md) / var(--p-leading-normal) var(--p-font-porsche-next) !important;
  color: var(--_p-drilldown-a) !important;
  text-decoration: underline !important;
  text-decoration-color: transparent !important;
  cursor: pointer !important;
  transition: text-decoration-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out) !important;
}
::slotted(a:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
@media(forced-colors:active) {
  ::slotted(a:focus-visible) {
    outline-color: Highlight !important;
  }
}

@media(hover:hover) {
  ::slotted(a:hover) {
    text-decoration-color: inherit !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for hasSlottedAnchor: true and isActive: true 1`] = `
":host {
  display: grid;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(a) {
  all: unset !important;
  padding: calc(var(--p-spacing-fluid-sm) + 2px) calc(var(--p-spacing-fluid-sm) + 4px) !important;
  margin: -2px calc(var(--p-spacing-fluid-sm) * -1 - 4px) !important;
  border-radius: var(--p-radius-sm) !important;
  font: var(--p-font-weight-normal) var(--p-typescale-md) / var(--p-leading-normal) var(--p-font-porsche-next) !important;
  color: var(--_p-drilldown-a) !important;
  text-decoration: underline !important;
  text-decoration-color: inherit !important;
  cursor: default !important;
  transition: text-decoration-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out) !important;
}
::slotted(a:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
@media(forced-colors:active) {
  ::slotted(a:focus-visible) {
    outline-color: Highlight !important;
  }
}

@media(hover:hover) {
  ::slotted(a:hover) {
    text-decoration-color: inherit !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for hasSlottedAnchor: true and isActive: true 2`] = `
":host {
  display: grid;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(a) {
  all: unset !important;
  padding: calc(var(--p-spacing-fluid-sm) + 2px) calc(var(--p-spacing-fluid-sm) + 4px) !important;
  margin: -2px calc(var(--p-spacing-fluid-sm) * -1 - 4px) !important;
  border-radius: var(--p-radius-sm) !important;
  font: var(--p-font-weight-normal) var(--p-typescale-md) / var(--p-leading-normal) var(--p-font-porsche-next) !important;
  color: var(--_p-drilldown-a) !important;
  text-decoration: underline !important;
  text-decoration-color: inherit !important;
  cursor: default !important;
  transition: text-decoration-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out) !important;
}
::slotted(a:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
@media(forced-colors:active) {
  ::slotted(a:focus-visible) {
    outline-color: Highlight !important;
  }
}

@media(hover:hover) {
  ::slotted(a:hover) {
    text-decoration-color: inherit !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for hasSlottedAnchor: true and isActive: true 3`] = `
":host {
  display: grid;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(a) {
  all: unset !important;
  padding: calc(var(--p-spacing-fluid-sm) + 2px) calc(var(--p-spacing-fluid-sm) + 4px) !important;
  margin: -2px calc(var(--p-spacing-fluid-sm) * -1 - 4px) !important;
  border-radius: var(--p-radius-sm) !important;
  font: var(--p-font-weight-normal) var(--p-typescale-md) / var(--p-leading-normal) var(--p-font-porsche-next) !important;
  color: var(--_p-drilldown-a) !important;
  text-decoration: underline !important;
  text-decoration-color: inherit !important;
  cursor: default !important;
  transition: text-decoration-color var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-in-out) !important;
}
::slotted(a:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
@media(forced-colors:active) {
  ::slotted(a:focus-visible) {
    outline-color: Highlight !important;
  }
}

@media(hover:hover) {
  ::slotted(a:hover) {
    text-decoration-color: inherit !important;
  }
}
"
`;
